tests/snapshots/snapshot_integration__d2__if_else.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int x = 0;"
D6: "(x > 0)"
D6.shape: diamond
D11: "x++;"
D15: "x--;"
D17: "return x;"
D4 -> D6
D11 -> D17
D15 -> D17
D6 -> D11: Y
D6 -> D15: N
D17 -> D1
D0 -> D4
