tests/snapshots/snapshot_integration__d2__if_without_else.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int x = 0;"
D6: "(x < 5)"
D6.shape: diamond
D11: "x = x + 10;"
D13: "return x;"
D4 -> D6
D6 -> D13: N
D11 -> D13
D6 -> D11: Y
D13 -> D1
D0 -> D4
