tests/snapshots/snapshot_integration__d2__lambda_in_statement.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int x = 0;"
D6: "auto f = [&](int v) {\n    if (v > 0) {\n      return v;\n    }\n    return -v;\n  };"
D8: "x = f(3);"
D10: "return x;"
D4 -> D6
D6 -> D8
D8 -> D10
D10 -> D1
D0 -> D4
