tests/snapshots/snapshot_integration__d2__linear_return.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int a = 1;"
D6: "a += 2;"
D8: "return a;"
D4 -> D6
D6 -> D8
D8 -> D1
D0 -> D4
