tests/snapshots/snapshot_integration__d2__multi_function_pick_second.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int y = 2;"
D6: "y += 3;"
D8: "return y;"
D4 -> D6
D6 -> D8
D8 -> D1
D0 -> D4
