tests/snapshots/snapshot_integration__d2__namespace_function.snap
---
source: tests/snapshot_integration.rs
expression: output
---
D0: begin
D1: end
D4: "int a = 1;"
D6: "(a > 0)"
D6.shape: diamond
D11: "a++;"
D13: "return a;"
D4 -> D6
D6 -> D13: N
D11 -> D13
D6 -> D11: Y
D13 -> D1
D0 -> D4
